--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "react-native clean",
     "ios": "react-native run-ios",
     "lint": "eslint .",
+    "lint-fix": "eslint . --ext .ts,.tsx,.js --fix",
     "start": "react-native start",
     "test": "jest"
   },
