--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '0'
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm instalasssl
+s
       - name: Lint
         run: npm run lint
 
