--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "android": "react-native run-android",
     "clean": "react-native clean",
     "ios": "react-native run-ios",
+    "check": "eslint . && npx tsc --noEmit",
     "lint": "eslint .",
     "lint-fix": "eslint . --ext .ts,.tsx,.js --fix",
+    "ts": "npx tsc --noEmit",
     "start": "react-native start",
     "test": "jest"
   },
