--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -44,6 +44,7 @@ jobs:
         if: steps.check_changelog.outputs.changelog_modified == 'false'
         uses: peter-evans/create-or-update-comment@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Et le changelog il vient à pied ?
