--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -44,6 +44,6 @@ jobs:
         if: steps.check_changelog.outputs.changelog_modified == 'false'
         uses: thollander/actions-comment-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
             Et le changelog il vient à pied ?
