--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -50,3 +50,12 @@ jobs:
             Et le changelog il vient à pied ?
           pr-number: ${{ github.event.pull_request.number }}
           comment-tag: changelog_comment
+
+      - name: Post changelog comment
+        if: steps.check_changelog.outputs.changelog_modified == 'true'
+        uses: thollander/actions-comment-pull-request@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          pr-number: ${{ github.event.pull_request.number }}
+          comment-tag: changelog_comment
+          mode: delete
