--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -50,6 +50,12 @@ jobs:
             Et le changelog il vient à pied ?
           pr-number: ${{ github.event.pull_request.number }}
           comment-tag: changelog_comment
+      
+      - name: Post PR warning
+        if: steps.check_changelog.outputs.changelog_modified == 'false'
+        run: |
+          echo "::warning file=CHANGELOG.md::Please update the changelog file for this PR."
+
 
       - name: Post changelog comment
         if: steps.check_changelog.outputs.changelog_modified == 'true'
