rename app again

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,7 +41,5 @@ hermesEnabled=true
 
 MYAPP_UPLOAD_STORE_FILE=scores.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-
-
-# MYAPP_UPLOAD_STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}
-# MYAPP_UPLOAD_KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}
+MYAPP_UPLOAD_STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}
+MYAPP_UPLOAD_KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}
