--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,9 +78,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.awesomeproject"
+    namespace "com.scores"
     defaultConfig {
-        applicationId "com.awesomeproject"
+        applicationId "com.scores"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
