--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "scores",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,12 +11,14 @@
     "lint-fix": "eslint . --ext .ts,.tsx,.js --fix",
     "ts": "npx tsc --noEmit",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-install": " bash ./scripts/build_install.sh"
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@react-native/typescript-config": "0.79.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.57.1",
     "jest": "^29.6.3",
