--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,11 @@ jobs:
 
       - name: Build signed APK
         working-directory: android
-        run: ./gradlew assembleRelease
+        run: |
+          # ./gradlew assembleRelease
+          echo "coucou" >> android/app/build/outputs/apk/release/app-release.apk
+          echo ${{ github.ref_name }}
+          exit 1
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
