--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,15 +53,11 @@ jobs:
 
       - name: Build signed APK
         working-directory: android
-        run: |
-          # ./gradlew assembleRelease
-          echo ${{ github.ref_name }}
+        run: ./gradlew assembleRelease
           
-          exit 1
-
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: scores-${GITHUB_REF##*/}.apk
+          name: scores-${{ github.ref_name }}.apk
           path: android/app/build/outputs/apk/release/app-release.apk
           if-no-files-found: error
