Add a new player input

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "log": "npx react-native log-android",
     "clean": "react-native clean",
     "ios": "react-native run-ios",
     "check": "eslint . && npx tsc --noEmit",
