--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-vector-icons/fontawesome6": "^12.3.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.5"
   },
@@ -33,7 +34,7 @@
     "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.2",
     "@react-native/eslint-config": "0.79.2",
-      "@react-native/metro-config": "0.79.2",
+    "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
