--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "log": "npx react-native log-android",
     "clean": "react-native clean",
     "ios": "react-native run-ios",
     "check": "eslint . && npx tsc --noEmit",
@@ -16,8 +17,11 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native-vector-icons/evil-icons": "^12.4.0",
+    "@react-native-vector-icons/fontawesome6": "^12.3.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.5"
   },
